--- a/aedar-backend/package.json
+++ b/aedar-backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@supabase/supabase-js": "^2.50.3",
     "dotenv": "^17.1.0",
+    "googleapis": "^169.0.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
