--- a/aedar-backend/package.json
+++ b/aedar-backend/package.json
@@ -24,6 +24,7 @@
     "@google/generative-ai": "^0.24.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/cli": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
     "@supabase/supabase-js": "^2.50.3",
     "dotenv": "^17.1.0",
